--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,17 @@
   --special-color: #A62205;
   --background-color: #730303;
   --background-color-alt: #630303;
+  --background-base: #121212;
+  --background-highlight: #1a1a1a;
+  --background-press: #000;
+  --background-elevated-base: #242424;
+  --background-elevated-highlight: #2a2a2a;
+  --background-elevated-press: #000;
+  --background-tinted-base: #ffffff12;
+  --background-tinted-highlight: #ffffff1a;
+  --background-tinted-press: #ffffff0a;
+  --text-base: #fff;
+  --text-subdued: #a7a7a7;
   --main-transition: 0.4s;
   --main-padding: 100px;
   --main-radius: 8px;
@@ -24,6 +35,7 @@
 .Fashion-3-hex { color: #A62205; }
 .Fashion-4-hex { color: #400101; }
 .Fashion-5-hex { color: #730303; } */
+
 
 html {
   scroll-behavior: smooth;
@@ -42,13 +54,7 @@ ul {
 
 a {
   text-decoration: none;
-}
-
-.container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  color:var(--main-color)
 }
 
 /* End Global Rules */
@@ -61,32 +67,58 @@ a {
 /* End Selection */
 /* End Components */
 /* Start Responsive */
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
 
 /* End Responsive */
-
-.container{
-  display: flex;
-  justify-content: center;
+/* Start Page */
+.page{
+  min-height: 100vh;
 }
-h1{
-  color: var(--main-color);
-  text-transform: capitalize;
-  padding: 30px;
+/* Start Page */
+/* Start Sidebar */
+.page .sidebar{
+  width: 200px;
+  box-shadow: rgba(255, 255, 255, 0.1) 3px 0px 70px 10px;
 }
+.page .sidebar > a{
+  display: none;
+}
+.page .sidebar > h3{
+  text-transform: uppercase;
+  position: relative;
+  margin-bottom: 40px;
+}
+.page .sidebar ul li a{
+  transition: .3s;
+  margin-bottom: 10px;
+}
+.page .sidebar ul li a:hover,
+.page .sidebar ul li a.active{ 
+  background-color: var(--background-highlight);
+  border-radius: var(--main-radius);
+}
+.page .sidebar ul li a span{
+  font-size: 14px;
+  margin-left: 10px;
+}
+/* Start Media */
+@media (max-width:767px) {
+  .page .sidebar{
+    width: 62px;
+    padding: 10px;
+    text-align: center;
+  }
+  .page .sidebar a{
+    display: block;
+    width: 40px;
+    margin-top: 10px;
+    margin-bottom:20px;
+  }
+  .page .sidebar > h3{
+    display: none;
+  }
+  .sidebar ul li a span{
+    display: none;
+  }
+}
+/* End Media */
+/* End Sidebar */
