--- a/css/framework.css
+++ b/css/framework.css
@@ -1,12 +1,11 @@
 /* Start Display */
 .d-flex {display: flex;}
 .align-center {align-items: center;}
-.w-full{
-    width: 100%;
-}
+.w-full {width: 100%;}
 /* End Display */
 /* Start Padding & Margin */
 .p-10 {padding: 10px;}
+.p-15 {padding: 15px;}
 .p-20 {padding:20px;}
 .m-20 {margin:20px;}
 .mt-0 {margin-top: 0;}
@@ -33,7 +32,13 @@
 /* Start Border */
 rad-8 {border-radius: 8px;}
 /* End Border */
-
+/* Start Components */
+.between-flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/* End Components */
 
 
 
