--- a/css/framework.css
+++ b/css/framework.css
@@ -41,9 +41,10 @@
 .mr-15 {margin-right: 15px;}
 .mb-5 {margin-bottom: 5px;}
 .mb-10 {margin-bottom: 10px;}
+.mb-15 {margin-bottom: 15px;}
 .mb-20 {margin-bottom: 20px;}
 .mb-25 {margin-bottom: 25px;}
-.mr-10 {margin-right: 10px;}
+.ml-2 {margin-left: 2px;}
 /* End Padding & Margin */
 /* Start Color */
 /* Color Theme Swatches in Hex */
