--- a/css/style.css
+++ b/css/style.css
@@ -579,14 +579,36 @@ textarea:focus::placeholder {
   padding: 3px;
 }
 .widgets-control .control label{
-  margin-left:20px;
+  padding-left:30px;
   cursor: pointer;
   position: relative;
 }
-.widgets-control .control label{
-
+.widgets-control .control label::before{
+  content:"";
+  position:absolute;
+  width: 20px;
+  height: 20px;
+  background-color: var(--main-color);
+  left:0;
 }
-.toggle-checkbox{
+.widgets-control .control label:hover::before{
+  background-color: var(--main-color-alt);
+}
+.widgets-control .control label::after{
+  font-family:var(--fa-style-family-classic);
+  content:"\f00c";
+  font-weight: 900;
+  position: absolute;
+  left: 2px;
+  color:var(--background-color);
+  transform: scale(0) rotate(360deg);
+  transition: .3s;
+}
+.widgets-control .control input[type="checkbox"]:checked +label::after{
+  transform: scale(1);
+}
+.toggle-checkbox,
+.widgets-control input{
   -webkit-appearance: none;
   appearance: none;
   display: none;
