added last widget in setting page

--- a/css/framework.css
+++ b/css/framework.css
@@ -29,6 +29,8 @@
 .pt-20 {padding-top:20px;}
 .pb-20 {padding-bottom:20px;}
 .pl-15 {padding:15px;}
+.m-5 {margin:5px;}
+.m-15 {margin:15px;}
 .m-20 {margin:20px;}
 .mt-0 {margin-top: 0;}
 .mt-5 {margin-top: 5px;}
