--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ textarea:focus::placeholder {
 }
 .page .content .head .icons .notification i {
   color: var(--background-color);
+  cursor: pointer;
 }
 .page .content .head .icons img {
   width: 19px;
@@ -547,8 +548,8 @@ textarea:focus::placeholder {
   border: 1px solid #d9b58917;
 }
 /* End Project Table Widget */
-/* End Dashboard */
-/* Start Settings */
+/* End Dashboard Page*/
+/* Start Settings Page*/
 .settings-page{
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
@@ -610,22 +611,14 @@ textarea:focus::placeholder {
   transform: scale(0) rotate(360deg);
   transition: .3s;
 }
-.backup-control .control label::after{
-  content:"";
-  position: absolute;
-  width: 17px;
-  height: 17px;
-  border-radius: 50%;
-  background-color: var(--background-color);
-  left: 1.5px;
-  top:1.5px;
-  color:var(--background-color);
-  transform: scale(0);
-  transition: .3s;
-}
-.widgets-control .control input[type="checkbox"]:checked +label::after,
-.backup-control .control input[type="radio"]:checked +label::after{
+.widgets-control .control input[type="checkbox"]:checked +label::after{
   transform: scale(1);
+}
+.backup-control .control input[type="radio"]:checked +label::before{
+  background-color: var(--background-color);
+  width: 12px;
+  height: 12px;
+  border: 4px solid var(--main-color) ;
 }
 
 .backup-control .servers .server{
@@ -690,5 +683,8 @@ textarea:focus::placeholder {
   }
 }
 /* End Media */
-/* End Settings */
+/* End Settings Page */
+/* Start Profile Page*/
+
+/* End Profile Page */
 
