--- a/css/style.css
+++ b/css/style.css
@@ -702,9 +702,20 @@ textarea:focus::placeholder {
   height: 100%;
   background-color: var(--main-color);
 }
-.profile-page .avater-box{}
+.profile-page .info-box .box{
+  flex-wrap: wrap;
+  border-bottom: 1px solid;
+  transition: .3s;
+}
+.profile-page .info-box .box:hover{
 
+}
+.profile-page .info-box .box > div{
 
+}
+.profile-page .info-box > div h4{
+  font-weight: normal;
+}
 
 /* Start Media */
 @media (min-width:768px) {
